# goit-ds-hw-01

./: .dockerignore  Dockerfile  README.md  pyproject.toml
